--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -4,9 +4,12 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+package-lock.json
 
 # Environment variables
 .env
+.env.*
+!.env.example
 .env.local
 .env.development.local
 .env.test.local
@@ -16,10 +19,17 @@ pnpm-debug.log*
 dist/
 build/
 *.tsbuildinfo
+.next/
+out/
 
 # Logs
 logs/
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
 # OS files
 .DS_Store
@@ -29,6 +39,7 @@ logs/
 .Trashes
 ehthumbs.db
 Thumbs.db
+desktop.ini
 
 # IDE
 .vscode/
@@ -40,19 +51,40 @@ Thumbs.db
 .classpath
 .settings/
 *.sublime-*
+.history/
+*.code-workspace
 
 # Test coverage
 coverage/
 .nyc_output/
+*.lcov
 
 # Temporary files
 tmp/
 temp/
 *.tmp
+*.bak
+*.backup
 
 # Vite
 .vite/
 vite.config.js.timestamp-*
+vite.config.*.timestamp-*
 
 # Editor directories
 .cache/
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Turbopack cache
+.turbo/
