--- a/backend/package.json
+++ b/backend/package.json
@@ -7,11 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "seed": "node prisma/seed.js",
+    "seed": "node prisma/seed-google-books.js",
     "check-seed": "node prisma/check-seed.js"
   },
   "prisma": {
-    "seed": "node prisma/seed.js"
+    "seed": "node prisma/seed-google-books.js"
   },
   "keywords": [],
   "author": "",
