--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.78.0",
+    "axios": "^1.13.2",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "lenis": "^1.3.14",
