Fix deployment: Install frontend dependencies before build

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:backend": "cd backend && npm run dev",
     "dev:frontend": "cd frontend && npm run dev",
     "dev": "concurrently -n backend,frontend -c blue,green \"npm run dev:backend\" \"npm run dev:frontend\"",
-    "build": "cd frontend && npm run build",
+    "build": "cd frontend && npm install && npm run build",
     "db:setup": "cd backend && npx prisma migrate dev && node prisma/seed.js"
   },
   "repository": {
