fix: fixed prettier format and linting issues

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 
 # Dependencies
 node_modules/
-node_modules/**/
+**/node_modules/
+
 # Environment variables
 .env
 .env.*
@@ -13,6 +14,7 @@ node_modules/**/
 npm-debug.log*
 yarn-debug.log*
 pnpm-debug.log*
+lerna-debug.log*
 
 # OS files
 .DS_Store
@@ -24,19 +26,28 @@ ehthumbs.db
 Thumbs.db
 desktop.ini
 
-# IDE
-.vscode/
+# IDE & Editors
+.vscode/*
+!.vscode/extensions.json
 .idea/
 *.swp
 *.swo
 *~
 .sublime-*
 .history/
+*.sublime-workspace
+*.sublime-project
 
-# Build outputs (handled by subproject .gitignore)
+# Build outputs
 dist/
+dist-ssr/
 build/
 *.tsbuildinfo
+*.local
+
+# Testing
+coverage/
+.nyc_output/
 
 # Temporary files
 tmp/
@@ -45,5 +56,16 @@ temp/
 *.bak
 *.backup
 
-# Package lock files (optional - remove if you want to track them)
-package-lock.json
+# Cache
+.cache/
+.parcel-cache/
+.vite/
+
+# Production
+.vercel/
+.netlify/
+
+# Debug
+.pnp.*
+.yarn/
+.next/
