--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "seed": "node prisma/seed-google-books.js",
-    "check-seed": "node prisma/check-seed.js"
+    "start": "NODE_ENV=production node server.js",
+    "dev": "NODE_ENV=development nodemon server.js",
+    "seed": "node prisma/seed.js",
+    "seed:google": "node prisma/seed-google-books.js",
+    "check-seed": "node prisma/check-seed.js",
+    "db:generate": "npx prisma generate",
+    "db:migrate": "npx prisma migrate deploy",
+    "db:push": "npx prisma db push",
+    "db:studio": "npx prisma studio"
   },
   "prisma": {
     "seed": "node prisma/seed-google-books.js"
